package com.retailapp.billing.constants;

public enum ProductTypes {
    GROCERY,
    ELECTRONICS,
    CLOTHING,
    STATIONERY,
    COSMETICS;
}
