package com.retailapp.billing.constants;

public enum UserTypes {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER;
}
